--- a/examples/docker/pyproject.toml
+++ b/examples/docker/pyproject.toml
@@ -13,7 +13,7 @@ name = "docker-project"
 requires-python = ">=3.12"
 version = "0.1.0"
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 name = "docker-project"
 platforms = ["linux-64", "linux-aarch64", "osx-arm64"]
@@ -24,28 +24,16 @@ flask = ">=3.0.2,<3.1"
 gunicorn = ">=21.2.0,<21.3"
 
 [tool.pixi.feature.dev.pypi-dependencies]
-# Built editable in development mode
+# Installed as editable in development mode for fast iteration
 docker-project = { path = ".", editable = true }
+
+[tool.pixi.feature.prod.pypi-dependencies]
+# Installed as non-editable in production for a clean deployment
+# Both dev and prod can be in the same solve-group despite different editability
+docker-project = { path = ".", editable = false }
 
 [tool.pixi.feature.test.dependencies]
 pytest = "*"
-
-# Used for installing into production, as a post-process step
-# we would like make better integration for this in the future.
-[tool.pixi.feature.prod.host-dependencies]
-uv = "0.4.3"
-
-# We use dependencies from conda to use it to build the wheel
-[tool.pixi.feature.build.dependencies]
-hatch = "1.12.0"
-
-[tool.pixi.feature.build.tasks]
-# Create a wheel for installation
-build-wheel = "hatch build -t wheel"
-
-[tool.pixi.feature.prod.tasks]
-# Install into the production environment
-install-wheel = "uv pip install --no-deps --disable-pip-version-check --no-cache-dir dist/docker_project-*.whl"
 
 [tool.pixi.tasks]
 dev = "flask --app docker_project:app run --debug"
@@ -55,7 +43,8 @@ start = "gunicorn -w 4 docker_project:app --bind :8000"
 test = "pytest"
 
 [tool.pixi.environments]
-# Default environment, has features for running in development, testing and building
-default = { features = ["test", "dev", "build"], solve-group = "default" }
-# Leaner environment for use in production
+# Default environment for development and testing (editable install)
+default = { features = ["test", "dev"], solve-group = "default" }
+# Production environment (non-editable install)
+# Both environments share the same solve-group but have different editability
 prod = { features = ["prod"], solve-group = "default" }
