--- a/crates/pixi_cli/Cargo.toml
+++ b/crates/pixi_cli/Cargo.toml
@@ -22,7 +22,7 @@ clap = { workspace = true, features = [
 ] }
 clap_complete = { workspace = true }
 clap_complete_nushell = { workspace = true }
-comfy-table = { workspace = true }
+comfy-table = { workspace = true, features = ["custom_styling"] }
 console = { workspace = true, features = ["windows-console-colors"] }
 console-subscriber = { workspace = true, optional = true }
 ctrlc = { workspace = true }
